dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: reverse-words
    app.kubernetes.io/instance: argocd-demo
  name: reverse-words-route
  namespace: argocd-demo
spec:
  host: >-
    reverse-words-route-argocd-demo.apps.cluster-tor-76a5.tor-76a5.example.opentlc.com
  port:
    targetPort: http
  to:
    kind: Service
    name: reverse-words
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - host: >-
        reverse-words-route-argocd-demo.apps.cluster-tor-76a5.tor-76a5.example.opentlc.com
      routerCanonicalHostname: apps.cluster-tor-76a5.tor-76a5.example.opentlc.com
      routerName: default
      wildcardPolicy: None
